added icon for birthday section

--- a/index.html
+++ b/index.html
@@ -182,59 +182,95 @@
                 </h3>
                 <!-- Tematy urodzin -->
                 <div class="row-fluid">
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="indianie">
                       <h4> Indiańska wioska </h4>
+                      <img src="src/piktogramy/indianie_1.png" class="firstIconUro"> </img>
+                      <img src="src/piktogramy/indianie_2.png" class="secondIconUro"> </img>
+                      <div>
                       Indiańskie podchody </br>
                       Zdobywanie pióropuszy </br>
                       Legendy plemienne
+                      </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="survival">
                       <h4 style="color: #f47e57ff;"> SurvivaLOVE </h4>
+                      <img src="src/piktogramy/surviva_1.png" class="firstIconUro"> </img>
+                      <img src="src/piktogramy/surviva_2.png" class="secondIconUro"> </img>
+                      <div>
                       Balonowa bitwa </br>
                       Budowanie szałasu </br>
                       Zabawy z kompasem i mapą
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="mapa">
                       <h4> Palcem po mapie </h4>
+                      <img src="src/piktogramy/mapa_1.png" class="firstIconUro"> </img>
+                      <img src="src/piktogramy/mapa_2.png" class="secondIconUro"> </img>
+                      <div>
                       Czy da się zwiedzić cały świat w dwie godziny! Oczywiście :D </br>
                       Zabawy z najdalszych zakamarków świata </br>
                       Tworzenie ogromnej mapy
+                      </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="damy">
                       <h4> Damy i rycerze </h4>
+                      <img src="src/piktogramy/damy_1.png" class="firstIconUro"> </img>
+                      <img src="src/piktogramy/damy_2.png" class="secondIconUro"> </img>
+                      <div>
                       Zabawa w iście królewskim stylu: </br>
                       Tańce średniowieczne </br>
                       Tworzenie królewskiej biżuterii </br>
                       Zawody rycerskie
+                      </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="sixteen">
                       <h4 style="color: #f47e57ff;"> Sweet sixteen </h4>
+                      <img src="src/piktogramy/sixteen_1.png" class="firstIconUro"> </img>
+                      <img src="src/piktogramy/sixteen_2.png" class="secondIconUro"> </img>
+                      <div>
                       Najbardziej różowo-mięciutkie przyjęcie w tej części kraju </br>
                       Przebieranki - pokaz mody </br>
                       Quizy i zadania </br>
                       Kolorowe warkoczyki
+                      </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="cyrk">
                       <h4 style="color: #f47e57ff;"> Cyrk na kółkach </h4>
+                      <img src="src/piktogramy/cyrk_1.png" class="firstIconUro"> </img>
+                      <img src="src/piktogramy/cyrk_2.png" class="secondIconUro"> </img>
+                      <div>
                       Warsztaty modelowania balonów </br>
                       Zabawy żonglerskie
+                      </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="piraci">
                       <h4> Piracka przygoda </h4>
+                      <img src="src/piktogramy/sixteen_1.png" class="firstIconUro"> </img>
+                      <img src="src/piktogramy/sixteen_2.png" class="secondIconUro"> </img>
+                      <div>
                       Poszukiwanie zaginionego skarbu </br>
                       Tworzenie ogromnego statku pirackiego </br>
                       Pirackie przyśpiewki
+                      </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="bajka">
                       <h4> Bajkowa kraina </h4>
+                      <img src="src/piktogramy/bajki_1.png" class="firstIconUro"> </img>
+                      <img src="src/piktogramy/bajki_2.png" class="secondIconUro"> </img>
+                      <div>
                       Niesamowita podróż po świecie bajek </br>
                       w towarzystwie swoich ulubionych postaci
+                      </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="chemia">
                       <h4 style="color: #f47e57ff;"> Chemia od kuchnii </h4>
+                      <img src="src/piktogramy/chemia_1.png" class="firstIconUro"> </img>
+                      <img src="src/piktogramy/chemia_2.png" class="secondIconUro"> </img>
+                      <div>
                       Doświadczenia z produktami używanymi w kuchni </br>
                       Pokaz substancji chemicznych </br>
                       Zabawa z ciekawostkami o świecie fizyki i przyrody
+                      </div>
                     </div>
                   </div>
                   <!-- koniec tematów -->
@@ -542,19 +578,30 @@
         </div>
         <div style="height: 33.3vh; line-height: 33.3vh; padding-left: 15px; background-color: #f47e57ff" id="dorosli">
           <span> <h3> DLA DOROSŁYCH </h3> </span>
+          <!-- Treść dla dorosłych -->
+          <h2 style="display: none;"> Już wkrótce... </h2>
         </div>
         <div style="height: 33.4vh; line-height: 33.4vh; padding-left: 15px; background-color: #f04248ff" id="eventy">
           <span> <h3> ORGANIZACJA EVENTÓW </h3> </span>
+          <h2 style="display: none;"> Już wkrótce... </h2>
         </div>
     </div>
 
-    <div style="height: 100vh; background-color: #f15a29ff" id="wyjazdy">
-
+    <div style="height: auto; padding: 30px 15px 30px 15px; text-align: center; background-color: #f15a29ff" id="wyjazdy">
+      Jakieś fotki:)
+      <h4> Animatu organizuje lub współorganizuje także kolonie, półkolonie i zimowiska. </br>
+       Tu będzie można znaleźć informację o najbliższych organizowanych obozach. </h4>
     </div>
 
     <div style="height: auto; width: 100%; background-color: #1b75bcff; padding-top: 30px; text-align: center; padding-bottom: 30px;" id="kontakt">
       <div>
         <!-- <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=2&amp;bgcolor=%23ffff33&amp;src=msaduo8879120p4bmlidl517ck%40group.calendar.google.com&amp;color=%236B3304&amp;ctz=Europe%2FWarsaw" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>        <form id="contact"> -->
+        <h3> Animatu - animacja czasu wolnego </h3>
+        <h4> Magdalena Szwarcbach </h4>
+        <ul>
+          <li> Telefon: +48 123 456 678 </li>
+          <li> E-mail: magda@animatu.pl </li>
+        </ul>
         <div class="contactForm">
             <div class="form-group center-block">
               <label for="inputName"> Imię i nazwisko </label>
@@ -576,8 +623,11 @@
             </div>
           </form>
         </div>
+        <p style="margin-top: 15px;"> Kontakt w sprawie błędów i zawartości strony: web@animatu.pl </p>
       </div>
-
+    <div class="foot">
+      Karol Novljaković Ⓒ 2018
+    </div>
     </div>
     <!-- ładowanie -->
     <div class="modal" id="load">
