services section icons and some mobile improvements

--- a/index.html
+++ b/index.html
@@ -107,37 +107,51 @@
             Wszyscy nasi animatorzy swoje doświadczenia czerpią z harcerskiej pracy, jednocześnie mamy w swoich szeregach instruktorów,
             pedagogów oraz specjalistów do spraw organizacji.
           </h4>
-          <h2> Madzia Szwarcbach </h2>
-          <div>
-            <img src="src/magda.jpg" style="border-radius: 50%; width: 200px;"> </img>
-            <h4>
-            Założycielka firmy animacyjnej Animatu, z wykształcenia pedagog przedszkolny i wczesnoszkolny.
-            Instruktor ZHP, działa głownie w pionie zuchowym. Animacją czasu dla dzieci zajmuje się od 3 lat.
-            Prywatnie miłośniczka psów, zwłaszcza springerów, w wolnych chwilach lubi przemeblowywać mieszkanie.
-            </h4>
+          <div class="zdjeciezOpisem">
+            <img src="src/magda.jpg"> </img>
+            <span>
+              <h2> Madzia Szwarcbach </h2>
+              <h4>
+              Założycielka firmy animacyjnej Animatu, z wykształcenia pedagog przedszkolny i wczesnoszkolny. </br>
+              Instruktor ZHP, działa głownie w pionie zuchowym. Animacją czasu dla dzieci zajmuje się od 3 lat. </br>
+              Prywatnie miłośniczka psów, zwłaszcza springerów, w wolnych chwilach lubi przemeblowywać mieszkanie.
+              </h4>
+            </span>
           </div>
-          <img src="src/martyna.png" style="border-radius: 50%; width: 200px;"> </img>
-          <h2> Martyna Mamcarczyk-Stopka </h2>
-          <h4>
-            Mam na imię Martyna, jestem studentką dietetyki. Interesuje się zdrowym stylem życia, muzyką oraz w wolnych chwilach lubię udać się w góry.
-            Swoją przygodę z pracą z młodzieżą i dziećmi rozpoczęłam w 2010r. jako drużynowa i instruktor ZHP. Od zawsze dawało mi to zastrzyk pozytywnej
-            energii. Z Animatu mam przyjemność współpracować od roku, ale już zdarzyło mi się wziąć udział w wielu przedsięwzięciach i animacjach.
-            Udało mi się pomalować sporo uśmiechniętych buziek, skręcić mnóstwo kolorowych, balonowych zwierzaków oraz zaśpiewać wiele wspaniałych piosenek.
-            Każdy wasz uśmiech daje mi ogromną radość i motywacje do dalszego działania. Czekam z niecierpliwością na kolejne spotkania !
-          </h4>
-          <img src="src/juliam.jpg" style="border-radius: 50%; width: 200px;"> </img>
-          <h2> Julia Moskwa </h2>
-          <h4>
-            Jestem studentką pracy socjalnej oraz instruktorką ZHP. Lubię ludzi i pracę z ludźmi, a od czasu do czasu lubię zaszyć się w górach daleko od cywilizacji.
-            Czasem łapię się na tym, że zdarza mi się pomylić zebrę z żyrafą.
-          </h4>
-          <img src="src/julia.jpg" style="border-radius: 50%; width: 200px;"> </img>
-          <h2> Julka Janik </h2>
-          <h4>
-            W ZHP działam jako drużynowa, od około 2 lat prowadzę własna drużynę i świetnie dogaduję się z dziećmi. Od zawsze interesowała mnie zabawa z dziećmi,
-            ponieważ sprawiała mi niesamowitą satysfakcję i przyjemność, więc kiedy tylko mogłam pomagałam w animacjach. Jednymi z moich ulubionych zajęć
-            jest gra na ukulele oraz tańce integracyjne.
-          </h4>
+          <div class="zdjeciezOpisem">
+          <img src="src/martyna.png"> </img>
+            <span>
+              <h2> Martyna Mamcarczyk-Stopka </h2>
+              <h4>
+                Mam na imię Martyna, jestem studentką dietetyki. Interesuje się zdrowym stylem życia, muzyką oraz w wolnych chwilach lubię udać się w góry. </br>
+                Swoją przygodę z pracą z młodzieżą i dziećmi rozpoczęłam w 2010r. jako drużynowa i instruktor ZHP. </br> Od zawsze dawało mi to zastrzyk pozytywnej
+                energii. Z Animatu mam przyjemność współpracować od roku, ale już zdarzyło mi się wziąć udział w wielu przedsięwzięciach i animacjach. </br>
+                Udało mi się pomalować sporo uśmiechniętych buziek, skręcić mnóstwo kolorowych, balonowych zwierzaków oraz zaśpiewać wiele wspaniałych piosenek. </br>
+                Każdy wasz uśmiech daje mi ogromną radość i motywacje do dalszego działania. Czekam z niecierpliwością na kolejne spotkania !
+              </h4>
+            </span>
+          </div>
+          <div class="zdjeciezOpisem">
+          <img src="src/juliam.jpg"> </img>
+            <span>
+              <h2> Julia Moskwa </h2>
+              <h4>
+                Jestem studentką pracy socjalnej oraz instruktorką ZHP. Lubię ludzi i pracę z ludźmi, a od czasu do czasu lubię zaszyć się w górach daleko od cywilizacji. </br>
+                Czasem łapię się na tym, że zdarza mi się pomylić zebrę z żyrafą.
+              </h4>
+            </span>
+          </div>
+          <div class="zdjeciezOpisem">
+          <img src="src/julia.jpg"> </img>
+            <span>
+              <h2> Julka Janik </h2>
+              <h4>
+                W ZHP działam jako drużynowa, od około 2 lat prowadzę własna drużynę i świetnie dogaduję się z dziećmi. </br>Od zawsze interesowała mnie zabawa z dziećmi,
+                ponieważ sprawiała mi niesamowitą satysfakcję i przyjemność, więc kiedy tylko mogłam pomagałam w animacjach.</br> Jednymi z moich ulubionych zajęć
+                jest gra na ukulele oraz tańce integracyjne.
+              </h4>
+            </span>
+          </div>
           <div style="border-top: 3px dashed white; margin-top: 23px;">
             <h2 style="text-decoration: underline;"> Nasze osiągnięcia: </h2>
             <h3>Strefa Dziecięca "Małpi Chwyt" </h3>
@@ -166,15 +180,19 @@
               <div id="dzieciMenu">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="uro">
                   <h2>Urodziny </h2>
+                  <img src="src/piktogramy/tort.png"> </img>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="wes">
                   <h2> Wesela </h2>
+                  <img src="src/piktogramy/pierscienie.png"> </img>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="szk">
                   <h2> Dla szkół i przedszkoli </h2>
+                  <img src="src/piktogramy/tort.png"> </img>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="hot">
                   <h2> Dla hoteli </h2>
+                  <img src="src/piktogramy/hotel.png"> </img>
                 </div>
               </div>
               <!-- koniec wyboru -->
@@ -183,8 +201,8 @@
                 <h3 style="margin-top: 0;"> </br> Urodziny to bardzo wyjątkowa sprawa dla każdego młodego człowieka, dlatego w tej sprawie jesteśmy otwarci na potrzeby dzieci.
                 </h3>
                 <!-- Tematy urodzin -->
-                <div class="row-fluid">
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 .indianie">
+                <div class="row-fluid minH330">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="indianieU">
                       <h4> Indiańska wioska </h4>
                       <img src="src/piktogramy/indianie_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/indianie_2.png" class="secondIconUro"> </img>
@@ -194,7 +212,7 @@
                       Legendy plemienne
                       </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 .survival">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="survival">
                       <h4 style="color: #f47e57ff;"> SurvivaLOVE </h4>
                       <img src="src/piktogramy/surviva_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/surviva_2.png" class="secondIconUro"> </img>
@@ -204,7 +222,7 @@
                       Zabawy z kompasem i mapą
                     </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 .mapa">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="mapaU">
                       <h4> Palcem po mapie </h4>
                       <img src="src/piktogramy/mapa_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/mapa_2.png" class="secondIconUro"> </img>
@@ -214,7 +232,7 @@
                       Tworzenie ogromnej mapy
                       </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 .damy">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="damyU">
                       <h4> Damy i rycerze </h4>
                       <img src="src/piktogramy/damy_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/damy_2.png" class="secondIconUro"> </img>
@@ -225,7 +243,7 @@
                       Zawody rycerskie
                       </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 .sixteen">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="sixteen">
                       <h4 style="color: #f47e57ff;"> Sweet sixteen </h4>
                       <img src="src/piktogramy/sixteen_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/sixteen_2.png" class="secondIconUro"> </img>
@@ -236,7 +254,7 @@
                       Kolorowe warkoczyki
                       </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 .cyrk">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="cyrkU">
                       <h4 style="color: #f47e57ff;"> Cyrk na kółkach </h4>
                       <img src="src/piktogramy/cyrk_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/cyrk_2.png" class="secondIconUro"> </img>
@@ -245,7 +263,7 @@
                       Zabawy żonglerskie
                       </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 .piraci">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="piraciU">
                       <h4> Piracka przygoda </h4>
                       <img src="src/piktogramy/sixteen_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/sixteen_2.png" class="secondIconUro"> </img>
@@ -255,7 +273,7 @@
                       Pirackie przyśpiewki
                       </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 .bajka">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="bajkaU">
                       <h4> Bajkowa kraina </h4>
                       <img src="src/piktogramy/bajki_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/bajki_2.png" class="secondIconUro"> </img>
@@ -264,7 +282,7 @@
                       w towarzystwie swoich ulubionych postaci
                       </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 .chemia">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="chemia">
                       <h4 style="color: #f47e57ff;"> Chemia od kuchnii </h4>
                       <img src="src/piktogramy/chemia_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/chemia_2.png" class="secondIconUro"> </img>
@@ -325,9 +343,9 @@
                   </ul>
                 </p>
                 <h3>Tematy animacji do wyboru</h3>
-                <!-- Tematy urodzin -->
-                <div class="row-fluid">
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 .indianie">
+                <!-- Tematy wesel -->
+                <div class="row-fluid minH330">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="indianieW">
                       <h4> Indiańska wioska </h4>
                       <img src="src/piktogramy/indianie_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/indianie_2.png" class="secondIconUro"> </img>
@@ -337,7 +355,7 @@
                       Legendy plemienne
                       </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 .mapa">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="mapaW">
                       <h4> Palcem po mapie </h4>
                       <img src="src/piktogramy/mapa_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/mapa_2.png" class="secondIconUro"> </img>
@@ -347,7 +365,7 @@
                       Tworzenie ogromnej mapy
                       </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 .damy">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="damyW">
                       <h4> Damy i rycerze </h4>
                       <img src="src/piktogramy/damy_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/damy_2.png" class="secondIconUro"> </img>
@@ -358,7 +376,7 @@
                       Zawody rycerskie
                       </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 .cyrk">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="cyrkW">
                       <h4> Cyrk na kółkach </h4>
                       <img src="src/piktogramy/cyrk_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/cyrk_2.png" class="secondIconUro"> </img>
@@ -367,7 +385,7 @@
                       Zabawy żonglerskie
                       </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 .piraci">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="piraciW">
                       <h4> Piracka przygoda </h4>
                       <img src="src/piktogramy/piraci_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/piraci_2.png" class="secondIconUro"> </img>
@@ -377,7 +395,7 @@
                       Pirackie przyśpiewki
                       </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 .bajka">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="bajkaW">
                       <h4> Bajkowa kraina </h4>
                       <img src="src/piktogramy/bajki_1.png" class="firstIconUro"> </img>
                       <img src="src/piktogramy/bajki_2.png" class="secondIconUro"> </img>
@@ -403,40 +421,40 @@
                   <h3> Płatności: </h3>
                   <div class="row-fluid">
                     <!-- Pierwszy wiersz -->
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> Ilość animatorów
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> Ilość animatorów
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> Cena za 3 godziny animacji
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> Cena za 3 godziny animacji
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> Każda następna godzina
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> Każda następna godzina
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> Dwa dni animacji (6 godzin)
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> Dwa dni animacji (6 godzin)
                     </div>
                     <!-- Drugi wiersz -->
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 1 animator
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> 1 animator
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 350 zł
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> 350 zł
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 100 zł
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> 100 zł
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 600zł
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> 600zł
                     </div>
                     <!-- Trzeci wiersz -->
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 2 animatorów
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> 2 animatorów
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 500 zł
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> 500 zł
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 150 zł
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> 150 zł
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 850 zł
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> 850 zł
                     </div>
                     <!-- Czwarty wiersz -->
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 3 animatorów
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> 3 animatorów
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 650zł
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> 650zł
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 170 zł
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> 170 zł
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 1000zł
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"  class="priceTabWesela"> 1000zł
                     </div>
                   </div>
                   <p style="margin-top: 20px;">
