downsized imgs for faster loading, fixed animation on loading, added animation on 'soon' sections

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <!-- Set the page to the width of the device and set the zoon level -->
     <meta name="viewport" content="width = device-width, initial-scale = 1">
 
-    <link rel="icon" type="image/png" href="icon.png">
+    <link rel="icon" type="image/png" href="src/icon.png">
     <title> Animatu </title>
 
+    <link rel="stylesheet" type="text/css" href="src/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="src/slick/slick-theme.css"/>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="my-styles.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="src/slick/slick.min.js"></script>
     <script src="index.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.3/vivus.min.js"></script>
   </head>
@@ -112,8 +115,8 @@
             <span>
               <h2> Madzia Szwarcbach </h2>
               <h4>
-              Założycielka firmy animacyjnej Animatu, z wykształcenia pedagog przedszkolny i wczesnoszkolny. </br>
-              Instruktor ZHP, działa głownie w pionie zuchowym. Animacją czasu dla dzieci zajmuje się od 3 lat. </br>
+              Założycielka firmy animacyjnej Animatu, z wykształcenia pedagog przedszkolny i wczesnoszkolny.
+              Instruktor ZHP, działa głownie w pionie zuchowym. Animacją czasu dla dzieci zajmuje się od 3 lat.
               Prywatnie miłośniczka psów, zwłaszcza springerów, w wolnych chwilach lubi przemeblowywać mieszkanie.
               </h4>
             </span>
@@ -123,20 +126,20 @@
             <span>
               <h2> Martyna Mamcarczyk-Stopka </h2>
               <h4>
-                Mam na imię Martyna, jestem studentką dietetyki. Interesuje się zdrowym stylem życia, muzyką oraz w wolnych chwilach lubię udać się w góry. </br>
-                Swoją przygodę z pracą z młodzieżą i dziećmi rozpoczęłam w 2010r. jako drużynowa i instruktor ZHP. </br> Od zawsze dawało mi to zastrzyk pozytywnej
-                energii. Z Animatu mam przyjemność współpracować od roku, ale już zdarzyło mi się wziąć udział w wielu przedsięwzięciach i animacjach. </br>
-                Udało mi się pomalować sporo uśmiechniętych buziek, skręcić mnóstwo kolorowych, balonowych zwierzaków oraz zaśpiewać wiele wspaniałych piosenek. </br>
+                Mam na imię Martyna, jestem studentką dietetyki. Interesuje się zdrowym stylem życia, muzyką oraz w wolnych chwilach lubię udać się w góry.
+                Swoją przygodę z pracą z młodzieżą i dziećmi rozpoczęłam w 2010r. jako drużynowa i instruktor ZHP. Od zawsze dawało mi to zastrzyk pozytywnej
+                energii. Z Animatu mam przyjemność współpracować od roku, ale już zdarzyło mi się wziąć udział w wielu przedsięwzięciach i animacjach.
+                Udało mi się pomalować sporo uśmiechniętych buziek, skręcić mnóstwo kolorowych, balonowych zwierzaków oraz zaśpiewać wiele wspaniałych piosenek.
                 Każdy wasz uśmiech daje mi ogromną radość i motywacje do dalszego działania. Czekam z niecierpliwością na kolejne spotkania !
               </h4>
             </span>
           </div>
           <div class="zdjeciezOpisem">
-          <img src="src/juliam.jpg"> </img>
+          <img src="src/juliam.png"> </img>
             <span>
               <h2> Julia Moskwa </h2>
               <h4>
-                Jestem studentką pracy socjalnej oraz instruktorką ZHP. Lubię ludzi i pracę z ludźmi, a od czasu do czasu lubię zaszyć się w górach daleko od cywilizacji. </br>
+                Jestem studentką pracy socjalnej oraz instruktorką ZHP. Lubię ludzi i pracę z ludźmi, a od czasu do czasu lubię zaszyć się w górach daleko od cywilizacji.
                 Czasem łapię się na tym, że zdarza mi się pomylić zebrę z żyrafą.
               </h4>
             </span>
@@ -146,8 +149,8 @@
             <span>
               <h2> Julka Janik </h2>
               <h4>
-                W ZHP działam jako drużynowa, od około 2 lat prowadzę własna drużynę i świetnie dogaduję się z dziećmi. </br>Od zawsze interesowała mnie zabawa z dziećmi,
-                ponieważ sprawiała mi niesamowitą satysfakcję i przyjemność, więc kiedy tylko mogłam pomagałam w animacjach.</br> Jednymi z moich ulubionych zajęć
+                W ZHP działam jako drużynowa, od około 2 lat prowadzę własna drużynę i świetnie dogaduję się z dziećmi. Od zawsze interesowała mnie zabawa z dziećmi,
+                ponieważ sprawiała mi niesamowitą satysfakcję i przyjemność, więc kiedy tylko mogłam pomagałam w animacjach. Jednymi z moich ulubionych zajęć
                 jest gra na ukulele oraz tańce integracyjne.
               </h4>
             </span>
@@ -155,16 +158,21 @@
           <div style="border-top: 3px dashed white; margin-top: 23px;">
             <h2 style="text-decoration: underline;"> Nasze osiągnięcia: </h2>
             <h3>Strefa Dziecięca "Małpi Chwyt" </h3>
+            <h3 style="margin-bottom: 15px;"><a href="http://ipw.karma-dev.pro/dzieci/" target="_blank"> Strona wydarzenia </a></h3>
             <div class="hidden-xs">
               <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FIntegrowaniePrzezWspinanie%2Fvideos%2F1476845452348795%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
             </div>
             <div class="visible-xs" style="text-align: center;">
               <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FIntegrowaniePrzezWspinanie%2Fvideos%2F1476845452348795%2F&show_text=0&width=280" width="280" height="157" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
             </div>
-            <h4>Organizacja strefy Małpi Chwyt podczas największej wspinaczkowej imprezy w Polsce południowej.</br>To niesamowicie satysfakcjonujące
-            tworzyć strefę animacyjną otwartą 24 godziny na dobę przez trzy dni. </h4>
-            <h3>Animację świąteczne w Park & Hotel Łysoń </h3>
-            Karuzela ze zdjęciami będzie tu, o :)
+            <h4>Organizacja strefy Małpi Chwyt podczas największej wspinaczkowej imprezy w Polsce południowej - Integrowania przez Wspinanie.</br>To niesamowicie satysfakcjonujące
+            tworzyć strefę animacyjną otwartą 24 godziny na dobę przez trzy dni. </br></h4>
+            <h3>Animacje świąteczne w Park & Hotel Łysoń </h3>
+            <div class="slider">
+              <div> <h3> Czekam </h3> </div>
+              <div> <h3> na </h3> </div>
+              <div> <h3> zdjęcia </h3> </div>
+              <div> <h3> Magda </h3> </div>
           </div>
         </div>
       </div>
@@ -188,7 +196,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="szk">
                   <h2> Dla szkół i przedszkoli </h2>
-                  <img src="src/piktogramy/tort.png"> </img>
+                  <img src="src/piktogramy/szkoly.png"> </img>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="hot">
                   <h2> Dla hoteli </h2>
@@ -471,6 +479,13 @@
               <div id="szkoly">
                   <h3><span class="glyphicon glyphicon-arrow-left arrowMenu" style="text-align: right;"> </span></h3>
                   <h2> Nasza oferta dla szkół i przedszkoli </h2>
+                  <div class="slider">
+                    <div> <img src="src/zdj/szkoly1.jpg"  > </img> </div>
+                    <div> <img src="src/zdj/szkoly2.jpg"  > </img> </div>
+                    <div> <img src="src/zdj/szkoly3.jpg"  > </img> </div>
+                    <div> <img src="src/zdj/szkoly4.jpg"  > </img> </div>
+                    <div> <img src="src/zdj/szkoly5.jpg"  > </img> </div>
+                  </div>
                   <p>Chętnie podejmiemy współpracę ze szkołami i przedszkolami podczas organizacji wycieczek, święta szkoły czy innych uroczystości.
                   Nasze propozycje to:</p>
                   <!-- większe niż xs -->
@@ -525,6 +540,13 @@
                 </div>
                 <!-- xs -->
                 <div class="row-fluid hidden-xl hidden-lg hidden-md hidden-sm ofertaSzkoly">
+                  <div class="slider">
+                    <div> <img src="src/zdj/szkoly1.jpg"  > </img> </div>
+                    <div> <img src="src/zdj/szkoly2.jpg"  > </img> </div>
+                    <div> <img src="src/zdj/szkoly3.jpg"  > </img> </div>
+                    <div> <img src="src/zdj/szkoly4.jpg"  > </img> </div>
+                    <div> <img src="src/zdj/szkoly5.jpg"  > </img> </div>
+                  </div>
                   <!-- Pierwsza propozycja -->
                   <div class="col-xs-12 mobileOfertaSzkoly"> <p> Bal na sto par </p>
                   </div>
@@ -624,15 +646,22 @@
           <span> <h3> DLA DOROSŁYCH </h3> </span>
           <!-- Treść dla dorosłych -->
           <h2 style="display: none;"> Już wkrótce... </h2>
+          <img src="src/piktogramy/wkrotce.png"> </img>
         </div>
-        <div style="height: 33.4vh; line-height: 33.4vh; padding-left: 15px; background-color: #f04248ff" id="eventy">
+        <div style="height: 33.4vh; line-height: 33.4vh; padding-left: 15px; background-color: #f04248ff;" id="eventy">
           <span> <h3> ORGANIZACJA EVENTÓW </h3> </span>
           <h2 style="display: none;"> Już wkrótce... </h2>
+          <img src="src/piktogramy/wkrotce.png"> </img>
         </div>
     </div>
 
     <div style="height: auto; padding: 30px 15px 30px 15px; text-align: center; background-color: #f15a29ff" id="wyjazdy">
-      Jakieś fotki:)
+      <div class="slider">
+        <div> <img src="src/zdj/kolonie1.JPG"  > </img> </div>
+        <div> <img src="src/zdj/kolonie2.JPG"  > </img> </div>
+        <div> <img src="src/zdj/kolonie3.JPG"  > </img> </div>
+        <div> <img src="src/zdj/kolonie4.JPG"  > </img> </div>
+      </div>
       <h4> Animatu organizuje lub współorganizuje także kolonie, półkolonie i zimowiska. </br>
        Tu będzie można znaleźć informację o najbliższych organizowanych obozach. </h4>
     </div>
@@ -647,6 +676,8 @@
           <li> E-mail: magda@animatu.pl </li>
         </ul>
         <div class="contactForm">
+            <form action="https://formspree.io/animatu.animacjazabawy@gmail.com"
+      method="POST">
             <div class="form-group center-block">
               <label for="inputName"> Imię i nazwisko </label>
               <input type="text" class="form-control contact-input" id="inputName" placeholder="Imię i nazwisko" name="name">
@@ -678,8 +709,10 @@
 
     </div>
     <script>
-      new Vivus('load', {duration: 20, file: 'loading.svg'}, ()=>{
-        $('#load').fadeOut(500);
+      new Vivus('load', {duration: 40, file: 'loading.svg'}, (myVivus)=>{
+        if (myVivus.getStatus() === 'end') {
+          myVivus.reset().play();
+        }
       });
     </script>
 
